#887: Address off-canvas nav background scroll issue on Safari.

--- a/scss/_navbar-offcanvas.scss
+++ b/scss/_navbar-offcanvas.scss
@@ -4,6 +4,7 @@
 }
 .offcanvas-toggle-body-freeze {
   overflow-y: hidden;
+  position: fixed;
 }
 @keyframes fadein {
   from {
